examples/kju/positive/name_shadowing.kju
fun f():Unit{
	var f:Int=5;
	fun f():Unit{
	};
	f=3;
	f();
}

fun kju():Unit{
	f();
}
