examples/kju/negative/lexer/unknown_char.kju


fun main():Unit{
	var ą:Int = 5;
}